reports/StepByStep_Optimization.log
Traceback (most recent call last):
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 552, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def cost(p):
    global counterCostCall
    """
    Rosenbrock function.
    https://en.wikipedia.org/wiki/Test_functions_for_optimization    """
   
    x, y = p 
    f = 
    return f/80000.

counterCostCall = 0
Nx, Ny = 100, 100
x = np.linspace(-1.5, 1.5, Nx)
y = np.linspace(-1.5, 1.5, Ny)
X, Y = np.meshgrid(x, y)
zf = np.array([X.flatten(), Y.flatten()])
Z = cost(zf).reshape(Nx, Ny)
Z = np.where(Z > 0.3, np.nan, Z)
mask = np.ones_like(Z)
------------------

[1;36m  File [1;32m"C:\Temp\ipykernel_25500\782123115.py"[1;36m, line [1;32m8[0m
[1;33m    f =[0m
[1;37m        ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (782123115.py, line 8)

